--- a/jfc_base.css
+++ b/jfc_base.css
@@ -11,6 +11,7 @@ div, header, footer {
   background-color: #828282;
   border-radius: 10px;
   margin-bottom: 2%;
+  padding: 1%;
 }
 
 .template {
@@ -28,15 +29,17 @@ h1 {
   margin: 0 3%;
 }
 
+/* overlay */
+#overlay {
+  display: none;
+}
+
 /* login */
 #login {
   display: none;
 }
 
 /* board */
-#board {
-  padding: 1%;
-}
 
 #board.active td {
   cursor: pointer;
@@ -47,7 +50,7 @@ h1 {
   height: 100%;
 }
 
-#board td {
+td {
   width: 5%;
   height: 5%;
   background-color: #666;
@@ -75,12 +78,8 @@ h1 {
 }
 
 /* player names */
-#players {
-  padding: 1%;
-}
 .player {
   overflow: hidden;
-  padding: 1%;
   background-color: #666;
   border: medium solid #666;
 }
@@ -97,7 +96,6 @@ h1 {
 /* cards */
 #cards {
   overflow: auto;
-  padding: 1%;
 }
 .card {
   float: left;
@@ -110,9 +108,6 @@ h1 {
 .blue {background-color: blue;}
 
 /* footer */
-footer {
-  padding: 1%;
-}
 
 /* orientation */
 @media all and (orientation: landscape) {
@@ -120,7 +115,7 @@ footer {
     width: 70%;
     float: left;
   }
-  #players, #cards {
+  #players, #start, #cards {
     width: 23%;
     float: right;
   }
