--- a/gomo_base.css
+++ b/gomo_base.css
@@ -29,8 +29,30 @@ h1 {
   margin: 0 3%;
 }
 
-/* overlay */
-#overlay {
+/* No Javascript */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border-radius: 0;
+  background-color: #444;
+}
+#nojs {
+  width: 50%;
+  margin: 50px auto 0 auto;
+}
+
+/* error */
+#error {
+  position: fixed;
+  top: 25%;
+  left: 25%;
+  width: 50%;
+  border: 10px solid #444;
   display: none;
 }
 
@@ -55,7 +77,7 @@ td {
   height: 5%;
   background-color: #666;
   border-radius: 5px;
-  cursor: progress;
+  cursor: wait;
 }
 
 .color_0 {
